Fixed transparent navbar on mobile

--- a/src/components/Nav/Navbar.css
+++ b/src/components/Nav/Navbar.css
@@ -83,7 +83,6 @@ nav.transparent{
         position: fixed;
         top: 0;
         z-index: 99;
-        background-color: rgba(209, 255, 255, 0);
     }
 
     #nav-brand{
